--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -148,10 +148,10 @@
           </div>
           <div class="auto-container">
             <div class="page-title">
-              <h1 class="title-abt">Software Development</h1>
+              <h1 class="title-abt">Advisory</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Software Development</p></li>
+                <li><p class="page-about">Advisory</p></li>
               </ul>
             </div>
           </div>
@@ -167,30 +167,12 @@
                 alt=""
               />
               <div class="lower-content">
-                <h3>Software Development</h3>
+                <h3>Advisory</h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
+                  We provide expert and unique Software Development Service for the needs that are specifically fro industrial trens and upcomming market. Enchance Business growth and conques market with interative web and mobile solution We are effective in next generation enterprise application on the web,Mobile and desktop to modernized business process and enhance customes experience. Extensive Product Development Services across software development life cycle. We provide persistent product development service to help you stay competitive in the market
                 </p>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
+                  Customize the trend that are widely in our networks, design custom web application that meets all the challenge in business. We provide you secure,intractive,responive,elagant,sleek and fully customized UI/UX
                 </p>
                 <h6>Our Success JOURNEY We can Provide.</h6>
                 <p>
