--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -60,16 +60,15 @@
               <div class="menu-list">
                 <ul style="margin: 0">
                   <li>
-                    <a
-                      id="home"
-                      class="active-link home-color .main-a"
-                      style="color: #0092ff"
-                      href="../index.html"
-                      ><span>Home</span></a
-                    >
+                    <a id="home" href="../index.html"><span>Home</span></a>
                   </li>
                   <li class="dropdown">
-                    <a href="#" class="main-a">Services</a>
+                    <a
+                      href="#"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      >Services</a
+                    >
                     <ul class="services-list">
                       <li>
                         <a href="./softwaredev.html"
@@ -101,12 +100,17 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="#" class=".main-a">Technologies</a></li>
                   <li>
-                    <a id="About-us" class="active-link" href="#">About Us</a>
+                    <a href="../index.html" class=".main-a">Technologies</a>
+                  </li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li>
+                    <a id="About-us"  href="./aboutus.html"
+                      >About Us</a
+                    >
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="#"
+                    <a id="Contact-us" class="active-link" href="../index.html"
                       >Contact Us</a
                     >
                   </li>
@@ -171,10 +175,22 @@
               <div class="lower-content">
                 <h3>Advisory</h3>
                 <p>
-                  We provide expert and unique Software Development Service for the needs that are specifically fro industrial trens and upcomming market. Enchance Business growth and conques market with interative web and mobile solution We are effective in next generation enterprise application on the web,Mobile and desktop to modernized business process and enhance customes experience. Extensive Product Development Services across software development life cycle. We provide persistent product development service to help you stay competitive in the market
+                  We provide expert and unique Software Development Service for
+                  the needs that are specifically fro industrial trens and
+                  upcomming market. Enchance Business growth and conques market
+                  with interative web and mobile solution We are effective in
+                  next generation enterprise application on the web,Mobile and
+                  desktop to modernized business process and enhance customes
+                  experience. Extensive Product Development Services across
+                  software development life cycle. We provide persistent product
+                  development service to help you stay competitive in the market
                 </p>
                 <p>
-                  Customize the trend that are widely in our networks, design custom web application that meets all the challenge in business. We provide you secure,intractive,responive,elagant,sleek and fully customized UI/UX
+                  Customize the trend that are widely in our networks, design
+                  custom web application that meets all the challenge in
+                  business. We provide you
+                  secure,intractive,responive,elagant,sleek and fully customized
+                  UI/UX
                 </p>
                 <h6>Our Success JOURNEY We can Provide.</h6>
                 <p>
@@ -222,7 +238,9 @@
                 <ul class="service-list-tab">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -291,10 +309,12 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Software Development</a></li>
-                  <li><a href="#">Advanced Tech</a></li>
-                  <li><a href="#">Maintenance and Support</a></li>
-                  <li><a href="#">Advisory</a></li>
+                  <li><a href="./softwaredev.html">Software Development</a></li>
+                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
+                  <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
             </div>
@@ -302,11 +322,12 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Technologies</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="../index.html">Services</a></li>
+                  <li><a href="../index.html">Technologies</a></li>
+                  <li><a href="./careers.html">Technologies</a></li>
+                  <li><a href="./aboutus.html">About Us</a></li>
+                  <li><a href="../index.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -336,11 +357,12 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="#">Home</a></li>
-        <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="#">Technologies</a></li>
-        <li><a id="About-us-sidebar" href="#">About</a></li>
-        <li><a id="contact-sidebar" href="#">Contact</a></li>
+        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li><a id="Service-sidebar" href="../index.html">Services</a></li>
+        <li><a href="../index.html">Technologies</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
+        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
       </ul>
     </div>
 
