--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -357,7 +357,7 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li style="margin-top: 50px"><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a href="./careers.html">Career</a></li>
         <li><a href="./projects.html">Project</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
