--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -359,7 +359,7 @@
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
         <li>
-          <a id="toggle-service" href="#" style="color: #fff; background-color: #0092ff">Services</a>
+          <a id="toggle-service" href="#" style="color: #fff; background-color: #0092ff">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
           <ul id="menu" class="toogle-ul">
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
