--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -71,6 +71,24 @@
                     >
                     <ul class="services-list">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -382,16 +400,42 @@
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
         <li>
-          <a id="toggle-service" href="#" style="color: #fff; background-color: #0092ff">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a
+            id="toggle-service"
+            href="#"
+            style="color: #fff; background-color: #0092ff"
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./erppage.html" data-page="Service1"
+                >ERP Solutions</a
+              >
+            </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
-            <li><a href="./advisory.html" style="color: #fff; background-color: #0092ff">Advisory</a></li>
+            <li>
+              <a
+                href="./advisory.html"
+                style="color: #fff; background-color: #0092ff"
+                >Advisory</a
+              >
+            </li>
           </ul>
         </li>
         <li><a href="./careers.html">Career</a></li>
-        <li><a href="./projects.html">Project</a></li>
+       
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
