--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -130,7 +130,7 @@
                       </li>
                     </ul>
                   </li>
-                  
+
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
@@ -154,7 +154,12 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div
+          class="about-home"
+          style="
+            background: url('https://img.freepik.com/free-vector/business-automated-analytic-system-isometric-icon-businessman-hold-meeting_39422-758.jpg?w=1060&t=st=1699189926~exp=1699190526~hmac=24071c8e93043b9d80b7f31dd3b50c823a373707b070e904e9c6f115851b3990');
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -195,7 +200,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/projects/project-1.jpg"
+                src="https://img.freepik.com/free-photo/standard-quality-control-concept-m_23-2150041844.jpg?w=826&t=st=1699189986~exp=1699190586~hmac=7f8ac7ce88beab08d59cf56932c10a7b3289a3e77762c08e79e557d3f8912f7a"
                 alt=""
               />
               <div class="lower-content">
@@ -228,8 +233,9 @@
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
+                      style="border-radius: 30px"
                       class="lower-content-img"
-                      src="../assets/projects/project-2.jpg"
+                      src="https://img.freepik.com/free-vector/business-consultant-thoughtful-man-working-laptop_1262-20611.jpg?w=1380&t=st=1699190031~exp=1699190631~hmac=7accc00f68235f925ddd1b3a9af33979ee19372c6e634b5fbcac4a8a62776c19"
                       alt=""
                     />
                   </div>
