--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -326,51 +326,49 @@
         <div class="auto-container">
           <div class="main-footer-widgets">
             <div class="footer-col">
-              <h5 class="footer-title">Subscribe Us</h5>
-              <div class="footer-text">
-                Join us to our Newsletter and releases submit.
-              </div>
-              <div class="form-group">
-                <input type="email" placeholder="Enter your email!" required />
-                <button type="submit" class="submit-newsletter">
-                  <i class="fa-solid fa-arrow-right email-arrow"></i>
-                </button>
-              </div>
-              <div class="footer-privacy">
-                Our <span class="blue-footer">Privacy Policy</span> and provide
-                consent to receive <br />
-                updates from our company.
-              </div>
-            </div>
-            <div class="footer-col">
               <div class="footer-widget-links">
-                <h4 class="footer-title">Service Links</h4>
+                <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
-                  <li><a href="./websitedev.html">Website Development</a></li>
-                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
-                  <li><a href="./erppage.html">ERP Solutions</a></li>
-                  <li><a href="./softwaredev.html">Software Development</a></li>
-                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a id="home" href="#">Home</a></li>
+                  <li><a href="./pages/careers.html">Career</a></li>
                   <li>
-                    <a href="./maintenance.html">Maintenance and Support</a>
+                    <a id="About-us" href="./pages/aboutus.html">About Us</a>
                   </li>
-                  <li><a href="./advisory.html">Advisory</a></li>
-                  <li><a href="./appdev.html">App Development</a></li>
-                  <li><a href="./branding.html">Branding</a></li>
+                  <li>
+                    <a id="About-us" href="./pages/contact.html">Contact Us</a>
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="footer-col">
               <div class="footer-widget-links">
-                <h4 class="footer-title">Quick links</h4>
-                <ul class="main-footer-list">
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
-                  <li><a href="./aboutus.html">About Us</a></li>
-                  <li><a href="./contact.html">Contact Us</a></li>
+                <h4 class="footer-title">Services</h4>
+                <ul class="main-footer-list serv-list">
+                  <li>
+                    <a href="./pages/websitedev.html">Website Development</a>
+                  </li>
+                  <li>
+                    <a href="./pages/digitalmarket.html">Digital Marketing</a>
+                  </li>
+                  <li>
+                    <a href="./pages/erppage.html">ERP Solutions</a>
+                  </li>
+                  <li>
+                    <a href="./pages/softwaredev.html">Software Development</a>
+                  </li>
+                  <li><a href="./pages/advisory.html">Advanced Tech</a></li>
+                  <li>
+                    <a href="./pages/maintenance.html"
+                      >Maintenance and Support</a
+                    >
+                  </li>
+                  <li><a href="./pages/advisory.html">Advisory</a></li>
+                  <li><a href="./pages/appdev.html">App Development</a></li>
+                  <li><a href="./pages/branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
+
             <div class="footer-col">
               <div class="footer-widget-links-2">
                 <h4 class="footer-title">Socials</h4>
@@ -397,6 +395,23 @@
                     >
                   </li>
                 </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <h5 class="footer-title">Subscribe Us</h5>
+              <div class="footer-text">
+                Join us to our Newsletter and releases submit.
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Enter your email!" required />
+                <button type="submit" class="submit-newsletter">
+                  <i class="fa-solid fa-arrow-right email-arrow"></i>
+                </button>
+              </div>
+              <div class="footer-privacy">
+                Our <span class="blue-footer">Privacy Policy</span> and provide
+                consent to receive <br />
+                updates from our company.
               </div>
             </div>
           </div>
