--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -157,7 +157,7 @@
         <div
           class="about-home"
           style="
-            background: url('https://img.freepik.com/free-vector/business-automated-analytic-system-isometric-icon-businessman-hold-meeting_39422-758.jpg?w=1060&t=st=1699189926~exp=1699190526~hmac=24071c8e93043b9d80b7f31dd3b50c823a373707b070e904e9c6f115851b3990');
+            background: url('../assets/Service-images/Advisory\ -\ 1.jpg');
           "
         >
           <div class="header-top">
@@ -200,7 +200,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="https://img.freepik.com/free-photo/standard-quality-control-concept-m_23-2150041844.jpg?w=826&t=st=1699189986~exp=1699190586~hmac=7f8ac7ce88beab08d59cf56932c10a7b3289a3e77762c08e79e557d3f8912f7a"
+                src="../assets/Service-images/Advisory - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
