--- a/pages/branding.html
+++ b/pages/branding.html
@@ -46,7 +46,11 @@
   </head>
   <body>
     <div class="sidebar-closer"></div>
+    <div class="ping"></div>
 
+    <div class="whatsapp-btn">
+      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
     <div class="content">
       <!-- header section  -->
 
