--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -132,10 +132,17 @@
                           ><span class="text-span">Branding</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./aisol.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">AI Solutions</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
 
-                  <li><a href="./careers.html" class=".main-a">Career</a></li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./project.html" class=".main-a">Projects</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -283,6 +290,8 @@
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
+                  <li><a href="./aisol.html">AI Solutions</a></li>
+
                 </ul>
               </div>
               <div class="widget-content">
@@ -334,7 +343,8 @@
                 <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./project.html">Projects</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -369,6 +379,8 @@
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
+                  <li><a href="./aisol.html">AI Solutions</a></li>
+
                 </ul>
               </div>
             </div>
@@ -479,12 +491,15 @@
             <li>
               <a href="./branding.html">Branding</a>
             </li>
+            <li><a href="./aisol.html">AI Solutions</a></li>
+
           </ul>
         </li>
-        <li><a href="./careers.html">Career</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./project.html">Projects</a></li>
 
-        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
     <script src="../js/Sidebarcollapse.js"></script>
