--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -49,7 +49,11 @@
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -154,7 +158,9 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
@@ -166,9 +172,7 @@
         </header>
         <div
           class="about-home"
-          style="
-            background: url('../assets/Service-images/Advisory\ -\ 1.jpg');
-          "
+          style="background: url('../assets/Service-images/Advisory\ -\ 1.jpg')"
         >
           <div class="header-top">
             <div class="auto-container">
@@ -181,12 +185,21 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="mailto:hello@scipytechnologies.com">hello@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    >
                   </div>
                   <div class="header-top-social">
-                    <a href="https://www.facebook.com/scipytechnologiez/">FB.</a>
-                    <a href="https://www.instagram.com/scipytechnologies/">IN.</a>
-                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -215,29 +228,63 @@
               <div class="lower-content">
                 <h3>Advisory</h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interative web and mobile solution We are effective in
-                  next generation enterprise application on the web,Mobile and
-                  desktop to modernized business process and enhance customes
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the market
+                  Our advisory is distinguished for providing unparalleled
+                  Software Development Services tailored to the dynamic needs of
+                  industrial trends and emerging markets. With a primary focus
+                  on empowering businesses, fostering growth, and conquering
+                  markets, we specialise in delivering innovative and
+                  interactive web and mobile solutions. From next-generation
+                  enterprise applications across various platforms to the
+                  meticulous modernization of business processes, our commitment
+                  spans the entire software development life cycle. Through our
+                  extensive Product Development Services, we ensure a constant
+                  pulse on innovation, keeping our clients competitive in
+                  ever-evolving markets
                 </p>
+                <h6>Customised Solutions for Industry Trends:</h6>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenge in
-                  business. We provide you
-                  secure,intractive,responive,elagant,sleek and fully customized
-                  UI/UX
+                  A cornerstone of our approach is the customization of
+                  solutions aligned with prevalent industry trends. Within our
+                  expansive network, we excel in crafting bespoke web
+                  applications that effectively address the unique challenges
+                  faced by businesses. Our commitment goes beyond functionality,
+                  as we provide solutions that are not only secure, interactive,
+                  and responsive but also boast an elegant and sleek UI/UX. The
+                  hallmark of our service lies in the creation of fully
+                  customised design experiences, ensuring that our clients'
+                  digital presence not only meets but exceeds expectations,
+                  standing out in a rapidly evolving digital landscape.
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
+                <h6>Business Process Modernization and Responsive UI/UX:</h6>
                 <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+                  Going beyond conventional software development, we offer a
+                  comprehensive suite of services to modernise core business
+                  processes. From conceptualization to implementation, our
+                  expertise guides clients through a seamless digital
+                  transformation journey, enhancing operational efficiency and
+                  contributing to sustained growth. In the realm of user
+                  experience, our team is dedicated to crafting UI/UX designs
+                  that not only captivate visually but also respond intuitively
+                  to user interactions. The result is a responsive and elegant
+                  interface that not only engages users but elevates their
+                  overall interaction with applications. By focusing on user
+                  satisfaction and loyalty, we significantly enhance the value
+                  proposition of our clients' digital offerings.
+                </p>
+                <h6>Persistent Product Development:</h6>
+                <p>
+                  Our commitment extends beyond the initial implementation
+                  stages to provide persistent product development services.
+                  This ensures that our clients' software remains not only
+                  relevant but also competitive, staying aligned with the latest
+                  technological advancements. Our proactive approach enables
+                  clients to stay ahead in their industries, seamlessly adapting
+                  to changing technological landscapes while maintaining a
+                  distinct competitive edge. As a strategic partner, our
+                  advisory stands ready to guide businesses through the
+                  complexities of the modern digital landscape, empowering them
+                  to not only meet but exceed industry standards for sustained
+                  growth and market dominance
                 </p>
                 <div class="lower-content-row">
                   <div class="lower-content-col">
@@ -249,19 +296,13 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
+                    <h6>{___NEED CONTENT HERE___}</h6>
                     <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Modi ad fugiat cupiditate! Dolores iure nesciunt, eius
+                      vero ratione pariatur! Ipsum, aperiam nam ipsam aut fugiat
+                      nihil sapiente voluptatum? Vel, corporis?
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -289,7 +330,6 @@
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
               <div class="widget-content">
@@ -371,15 +411,12 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
             </div>
@@ -491,7 +528,6 @@
               <a href="./branding.html">Branding</a>
             </li>
             <li><a href="./aisol.html">AI Solutions</a></li>
-
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
