--- a/pages/advisory.html
+++ b/pages/advisory.html
@@ -296,12 +296,16 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>{___NEED CONTENT HERE___}</h6>
+                    <h6>Get in touch</h6>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Modi ad fugiat cupiditate! Dolores iure nesciunt, eius
-                      vero ratione pariatur! Ipsum, aperiam nam ipsam aut fugiat
-                      nihil sapiente voluptatum? Vel, corporis?
+                      Eager to leverage the strategic insights and expertise of
+                      our advisory team for your business success? Take the
+                      first step and get in touch with us at Scipy technologies.
+                      Whether you're navigating industry trends, seeking
+                      tailored solutions, or aiming for transformative growth,
+                      our advisory services are here to assist you. Contact us
+                      today to initiate a discussion about your unique business
+                      challenges and opportunities
                     </p>
                   </div>
                 </div>
